---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ??????
  Features:
    - Added Picker Zapper. Zap unwanted items and trash items.
    - Added Picker Item Editor. Edit held blueprints with a keybind.
  Changes:
    - Set the auto stock and releated scripts to off by default.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ??????
  Features:
    - Seperated into its own mod.
    - Added Filter Fill Toolbar.
    - Added Requester Fill Toolbar.
    - Added Inventory Sorting.
    - Added Chest Limiting.
    - Added Auto Trash Fix.
    - Added Auto Stock.
    - Added Item Count.