@@ -4,6 +4,7 @@ Date: ??????
   Features:
     - Added Picker Zapper. Zap unwanted items and trash items.
     - Added Picker Item Editor. Edit held blueprints with a keybind.
+    - Added buffer chests to the filter fill settings.
   Changes:
     - Set the auto stock and releated scripts to off by default.
 ---------------------------------------------------------------------------------------------------
